fpp_analysis/src/test/structs/format_bad_syntax.ref.txt
 --> [ local path prefix ]/structs/format_bad_syntax.fpp:1:27
  |
1 | struct S { x: U32 format "{" }
  |                           ^ unmatched `{` in format string
  |
  = note: consider escaping curly brace with `{{`

error: format string missing replacement fields
 --> [ local path prefix ]/structs/format_bad_syntax.fpp:1:15
  |
1 | struct S { x: U32 format "{" }
  |               --- missing format replacement field

